<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PartidasJugadas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="21dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/jugador1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/jugador2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dificultad" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resultado" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/lvPartidas"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>