<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RankingUsuarios">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:text="@string/usuario" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:text="@string/partidas" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/puntos" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/lvUsuarios"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>

</LinearLayout>