<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="319dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/unjugador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Jugar"
            android:text="@string/jugador1" />

        <Button
            android:id="@+id/dosjugadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Jugar"
            android:text="@string/jugador2" />

        <RadioGroup
            android:id="@+id/configD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facil" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dificil" />

            <RadioButton
                android:id="@+id/imposible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extremo" />
        </RadioGroup>

        <Button
            android:id="@+id/btnPartidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/partidas" />

        <Button
            android:id="@+id/btnRanking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ranking" />

        <ImageButton
            android:id="@+id/btnMutear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_lock_silent_mode_off" />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20pt"
        android:columnCount="1"
        android:useDefaultMargins="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5pt"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="toqueCasilla"
                android:src="@drawable/casilla" />

            <ImageView
                android:id="@+id/a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="toqueCasilla"
                android:src="@drawable/casilla" />

            <ImageView
                android:id="@+id/a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="toqueCasilla"
                android:src="@drawable/casilla" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5pt"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="toqueCasilla"
                android:src="@drawable/casilla" />

            <ImageView
                android:id="@+id/b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="toqueCasilla"
                android:src="@drawable/casilla" />

            <ImageView
                android:id="@+id/b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="toqueCasilla"
                android:src="@drawable/casilla" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5pt"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/c1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="toqueCasilla"
                android:src="@drawable/casilla" />

            <ImageView
                android:id="@+id/c2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="toqueCasilla"
                android:src="@drawable/casilla" />

            <ImageView
                android:id="@+id/c3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="toqueCasilla"
                android:src="@drawable/casilla" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

    </GridLayout>

</LinearLayout>